--- a/CleaningData.ipynb
+++ b/CleaningData.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1ccb0720-bc12-4260-81cd-d0c58f71aad2",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        "4             -73.983799   20197  Subscriber      1977.0       1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2e4acbc1-c558-400c-9496-fa4b820b109d",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cae72662-5fb5-47da-8cee-aa39f048d90c",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
        "4             -73.983799   20197  Subscriber      1977.0       1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "15f04ed4-5f08-408a-b3ae-1be82cd4edb3",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
       "dtypes: float64(4), int64(5), object(6)\n",
       "memory usage: 34.4+ MB\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 279924 entries, 0 to 285551\n",
+      "Index: 279924 entries, 0 to 285551\n",
       "Data columns (total 15 columns):\n",
       " #   Column                   Non-Null Count   Dtype  \n",
       "---  ------                   --------------   -----  \n",
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "1a950333-e748-4c5d-b3c3-ecc3e67ce0b6",
    "metadata": {},
    "outputs": [
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "173555c6-395f-487f-95d0-9105ff896579",
    "metadata": {},
    "outputs": [
@@ -864,8 +864,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8c9c3437-f36f-4ecd-b368-aa9939924e27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save and export as csv files\n",
+    "cleaned_Jan2014_df.to_csv('cleaned_Jan2014.csv', index=False)\n",
+    "cleaned_Jan2015_df.to_csv('cleaned_Jan2015.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4282318c-6b13-4508-ae9a-0cd93676c35a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -887,7 +899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
