--- a/CleaningData.ipynb
+++ b/CleaningData.ipynb
@@ -865,6 +865,50 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "e533c9d4-bae1-4f2c-801c-e58d5e1968e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for any NaN values in the 2014 DataFrame:\n",
+    "cleaned_Jan2014_df.isna().any().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1d056b69-e26e-4677-a67e-a33bd71da7cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for any NaN values in the 2015 DataFrame:\n",
+    "cleaned_Jan2015_df.isna().any().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "8c9c3437-f36f-4ecd-b368-aa9939924e27",
    "metadata": {},
    "outputs": [],
@@ -878,6 +922,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4282318c-6b13-4508-ae9a-0cd93676c35a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6050e27c-73b2-486b-9204-dfac48db7077",
    "metadata": {},
    "outputs": [],
    "source": []
